--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "hautelook/alice-bundle": "^1.4",
         "incenteev/composer-parameter-handler": "^2.0",
         "phpunit/phpunit": "^6.2",
         "sensio/distribution-bundle": "^5.0.19",
@@ -34,6 +35,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
