--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -1,7 +1,8 @@
 AppBundle\Entity\User:
-  user_weaverryan: weaverryan
-  email: 'ryan@knplabs.com'
-  password: '$2a$08$Y1J2TZ6KMp7pA4MYmq4oW.S.RN8E9dXqFTUHVQtCWyTTnU37akcrW'
+  user_weaverryan:
+    username: weaverryan
+    email: 'ryan@knplabs.com'
+    password: '$2a$08$Y1J2TZ6KMp7pA4MYmq4oW.S.RN8E9dXqFTUHVQtCWyTTnU37akcrW'
 
 AppBundle\Entity\Project:
   project_burning_bot:
