--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "guzzlehttp/guzzle": "^6.3",
         "hautelook/alice-bundle": "^1.4",
         "incenteev/composer-parameter-handler": "^2.0",
         "phpunit/phpunit": "^6.2",
